@@ -115,6 +115,7 @@ multiple objects: help files and doc updated
     fixed bug causing wrong order of accidentals in some key signatures
     the "setcursor" message has a new @zeropimchord attribute for setting the playhead on chords instead of barlines at the beginning of a measure
     fixed bug causing hangs when adding voices
+    new "auto" possibility for setting breakpoints via "addbreakpoint"
 
 - bach.score: XML import: mismatched ties do not cause pitch misplacement on the second note
         Pickup measures are correctly imported
